--- a/index.html
+++ b/index.html
@@ -224,7 +224,8 @@
         <h3 class="title is-4">VI/MI Paradigms</h3>
     
         <div class="publication-image">
-          <img src="./assets/images/paradigm.png" alt="VI/MI Paradigms" style="max-width: 100%; height: auto;">
+          <img src="./assets/images/paradigm.png" alt="VI/MI Paradigms"
+          style="display:block; margin:0 auto; width:45%; max-width:850px; height:auto;">
         </div>
     
         <div class="content has-text-justified">
@@ -437,7 +438,8 @@
         <h3 class="title is-4">Extended Online Demos</h3>
 
         <div class="publication-image">
-          <img src="./assets/images/online_demo.png" alt="Online demos for extended scenarios" style="max-width: 100%; height: auto;">
+          <img src="./assets/images/online_demo.png" alt="Online demos for extended scenarios" 
+          style="display:block; margin:0 auto; width:70%; max-width:900px; height:auto;">
         </div>
 
         <div class="content has-text-justified">
