--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <a href="">Yichang Liu</a><sup>1</sup>,&nbsp;
             </span>
             <span class="author-block">
-              <a href="https://star-uu-wang.github.io/">Tianyu Wang</a><sup>1</sup>,&nbsp;
+              <a href="https://star-uu-wang.github.io/" target="_blank" rel="noopener">Tianyu Wang</a><sup>2,4</sup>,&nbsp;
             </span>
             <span class="author-block">
               <a href="#" onclick="return false;">Yawei Li</a><sup>3</sup>,&nbsp;
@@ -83,10 +83,10 @@
               <a href="#" onclick="return false;">Yugang Jiang</a><sup>3</sup>,&nbsp;
             </span>
             <span class="author-block">
-              <a href="https://yanweifu.github.io/">Yanwei Fu</a><sup>2</sup>,&nbsp;
+              <a href="https://yanweifu.github.io/" target="_blank" rel="noopener">Yanwei Fu</a><sup>2,4</sup>,&nbsp;
             </span>
             <span class="author-block">
-              <a href="https://ziyiye.cn/">Ziyi Ye</a><sup>3*</sup>,&nbsp;
+              <a href="https://ziyiye.cn/" target="_blank" rel="noopener">Ziyi Ye</a><sup>3*</sup>,&nbsp;
             </span>
             <span class="author-block">
               <a href="#" onclick="return false;">Shouyan Wang</a><sup>1*</sup>
@@ -97,7 +97,9 @@
           <div class="is-size-5 publication-authors">
             <span class="author-block"><sup>1</sup>Institute of Science and Technology for Brain-inspired Intelligence (ISTBI), Fudan University&nbsp; &nbsp;</span>
             <span class="author-block"><sup>2</sup>School of Data Science, Fudan University&nbsp; &nbsp;</span>
-            <span class="author-block"><sup>3</sup>Institute of Trustworthy Embodied AI, Fudan University</span>
+            <span class="author-block"><sup>3</sup>Institute of Trustworthy Embodied AI, Fudan University&nbsp; &nbsp;</span>
+            <span class="author-block"><sup>4</sup>Shanghai Innovation Institute</span>
+
           </div>
 
           <p>
@@ -225,7 +227,7 @@
     
         <div class="publication-image">
           <img src="./assets/images/paradigm.png" alt="VI/MI Paradigms"
-          style="display:block; margin:0 auto; width:65%; max-width:850px; height:auto;">
+          style="display:block; margin:0 auto; width:45%; max-width:850px; height:auto;">
         </div>
     
         <div class="content has-text-justified">
@@ -439,7 +441,7 @@
 
         <div class="publication-image">
           <img src="./assets/images/online_demo.png" alt="Online demos for extended scenarios" 
-          style="display:block; margin:0 auto; width:60%; max-width:900px; height:auto;">
+          style="display:block; margin:0 auto; width:70%; max-width:900px; height:auto;">
         </div>
 
         <div class="content has-text-justified">
