--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               <a href="https://star-uu-wang.github.io/" target="_blank" rel="noopener">Tianyu Wang</a><sup>2,4</sup>,&nbsp;
             </span>
             <span class="author-block">
-              <a href="#" onclick="return false;">Yawei Li</a><sup>3</sup>,&nbsp;
+              <a href="#" onclick="return false;">Yawei Li</a><sup>5</sup>,&nbsp;
             </span>
             <span class="author-block">
               <a href="#" onclick="return false;">Yugang Jiang</a><sup>3</sup>,&nbsp;
@@ -98,7 +98,9 @@
             <span class="author-block"><sup>1</sup>Institute of Science and Technology for Brain-inspired Intelligence (ISTBI), Fudan University&nbsp; &nbsp;</span>
             <span class="author-block"><sup>2</sup>School of Data Science, Fudan University&nbsp; &nbsp;</span>
             <span class="author-block"><sup>3</sup>Institute of Trustworthy Embodied AI, Fudan University&nbsp; &nbsp;</span>
-            <span class="author-block"><sup>4</sup>Shanghai Innovation Institute</span>
+            <span class="author-block"><sup>4</sup>Shanghai Innovation Institute&nbsp; &nbsp;</span>
+            <span class="author-block"><sup>5</sup>ETH Zürich</span>
+
 
           </div>
 
