--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
               <a href="#" onclick="return false;">Yugang Jiang</a><sup>3</sup>,&nbsp;
             </span>
             <span class="author-block">
-              <a href="#" onclick="return false;">Shouyan Wang</a><sup>1*</sup>
+              <a href="#" onclick="return false;">Shouyan Wang</a><sup>1*</sup>,&nbsp;
             </span>
             <span class="author-block">
-              <a href="https://yanweifu.github.io/" target="_blank" rel="noopener">Yanwei Fu</a><sup>2,4</sup>,&nbsp;
+              <a href="https://yanweifu.github.io/" target="_blank" rel="noopener">Yanwei Fu</a><sup>2,4</sup>
             </span>
           </div>
 
