--- a/index.html
+++ b/index.html
@@ -171,6 +171,14 @@
     </div>
     <!--/ Abstract. -->
 
+
+    <h4 class="title is-5" style="margin-top: 10px;">Full demonstration</h4>
+    <div class="content">
+      <video controls preload="metadata" playsinline width="100%" style="border-radius: 12px;">
+        <source src="./assets/videos/online_full.mp4" type="video/mp4">
+      </video>
+    </div>
+
     <!-- Overview -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
@@ -327,38 +335,38 @@
             <tbody>
               <tr>
                 <td>01</td>
-                <td>63.64 (RGNN/40)</td>
-                <td>44.44 (RGNN/60)</td>
+                <td>63.64<br>(RGNN/40)</td>
+                <td>44.44<br>(RGNN/60)</td>
                 <td><b>47.14</b></td>
-                <td>75.00 (RGNN/60)</td>
-                <td>60.00 (MLP/40)</td>
+                <td>75.00<br>(RGNN/60)</td>
+                <td>60.00<br>(MLP/40)</td>
                 <td><b>61.67</b></td>
               </tr>
               <tr>
                 <td>02</td>
-                <td>50.00 (EEGNet/100)</td>
-                <td>39.13 (MLP/100)</td>
+                <td>50.00<br>(EEGNet/100)</td>
+                <td>39.13<br>(MLP/100)</td>
                 <td><u>40.82</u></td>
-                <td>65.22 (MLP/100)</td>
-                <td>60.00 (MLP/40)</td>
+                <td>65.22<br>(MLP/100)</td>
+                <td>60.00<br>(MLP/40)</td>
                 <td>58.41</td>
               </tr>
               <tr>
                 <td>03</td>
-                <td>50.00 (MLP/60)</td>
-                <td>33.67 (RGNN/60)</td>
+                <td>50.00<br>(MLP/60)</td>
+                <td>33.67<br>(RGNN/60)</td>
                 <td>38.89</td>
-                <td>60.00 (RGNN/100)</td>
-                <td>53.85 (RGNN/60)</td>
+                <td>60.00<br>(RGNN/100)</td>
+                <td>53.85<br>(RGNN/60)</td>
                 <td>54.62</td>
               </tr>
               <tr>
                 <td>04</td>
-                <td>37.50 (RGNN/100)</td>
-                <td>33.67 (MLP/60)</td>
+                <td>37.50<br>(RGNN/100)</td>
+                <td>33.67<br>(MLP/60)</td>
                 <td>34.72</td>
-                <td>66.67 (MLP/60)</td>
-                <td>60.00 (MLP/40)</td>
+                <td>66.67<br>(MLP/60)</td>
+                <td>60.00<br>(MLP/40)</td>
                 <td><u>60.00</u></td>
               </tr>
             </tbody>
@@ -465,12 +473,7 @@
       <div class="column is-four-fifths">
         <h3 class="title is-4">Online Demo Videos</h3>
 
-        <h4 class="title is-5" style="margin-top: 10px;">Full demonstration</h4>
-        <div class="content">
-          <video controls preload="metadata" playsinline width="100%" style="border-radius: 12px;">
-            <source src="./assets/videos/online_full.mp4" type="video/mp4">
-          </video>
-        </div>
+
 
         <h4 class="title is-5" style="margin-top: 18px;">Supplementary clips</h4>
         <div class="columns is-multiline is-centered">
