--- a/index.html
+++ b/index.html
@@ -171,12 +171,13 @@
     </div>
     <!--/ Abstract. -->
 
-
-    <h4 class="title is-5" style="margin-top: 10px;">Full demonstration</h4>
-    <div class="content">
-      <video controls preload="metadata" playsinline width="100%" style="border-radius: 12px;">
-        <source src="./assets/videos/online_full.mp4" type="video/mp4">
-      </video>
+    <div class="columns is-centered has-text-centered">
+      <h4 class="title is-5" style="margin-top: 10px;">Full demonstration</h4>
+      <div class="content">
+        <video controls preload="metadata" playsinline width="100%" style="border-radius: 12px;">
+          <source src="./assets/videos/online_full.mp4" type="video/mp4">
+        </video>
+      </div>
     </div>
 
     <!-- Overview -->
