--- a/index.html
+++ b/index.html
@@ -171,14 +171,20 @@
     </div>
     <!--/ Abstract. -->
 
+    <!-- Full demonstration -->
     <div class="columns is-centered has-text-centered">
-      <h4 class="title is-5" style="margin-top: 10px;">Full demonstration</h4>
-      <div class="content">
-        <video controls preload="metadata" playsinline width="100%" style="border-radius: 12px;">
-          <source src="./assets/videos/online_full.mp4" type="video/mp4">
-        </video>
+      <div class="column is-four-fifths">
+        <h4 class="title is-5" style="margin-top: 10px;">Full demonstration</h4>
+
+        <div class="content">
+          <video controls preload="metadata" playsinline width="100%" style="border-radius: 12px;">
+            <source src="./assets/videos/online_full.mp4" type="video/mp4">
+          </video>
+        </div>
       </div>
     </div>
+    <!--/ Full demonstration -->
+
 
     <!-- Overview -->
     <div class="columns is-centered has-text-centered">
